# led_panel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  media_updater.py  platformio.ini  remote_buttons.txt  sdkconfig  sdkconfig.old
components/esp32-fft/: CMakeLists.txt
components/esp32-fft/src/: fft.c
components/leddisplay/: CMakeLists.txt
components/leddisplay/src/: i2s_parallel.c  val2pwm.c  val2pwm.h
include/: analog_clock.h  binary_clock.h  config.h  decimal_clock.h  hex_clock.h  panel_loop.h  render_task.h  ui_element.h  weather.h
include/fonts/: big_clock.h  small_clock.h
lib/olivec/: olive.c
main/: CMakeLists.txt  analog_clock.c  fft_task.c  hex_clock.c  main.c  olive.c  render_task.c  spectrum.c  weather.c  weather_fetch_task.c
main/certs/: openweathermap_org_chain.pem
main/elements/: analog_clock.c  binary_clock.c  co2.c  decimal_clock.c  hex_clock.c  media.c  spectrum.c  weather.c
main/include/: fft_task.h  olive.h  overall_config.h  render_task.h  spectrum.h  ui_element.h
main/include/elements/: co2.h  hex_clock.h  media.h  spectrum.h  weather.h
main/include/fonts/: big_clock.h  small_clock.h
main/include/images/: rzheniye.h  snowflake.h
main/include/tasks/: hass.h  http.h  ir.h  led.h  media_server.h  render.h  weather_fetch.h
main/include/tasks/http/: co2.h  media.h  temp.h  weather.h
main/tasks/: fft.c  hass.c  http.c  ir.c  led.c  media_server.c  render.c  weather_fetch.c
main/tasks/http/: co2.c  media.c  temp.c  weather.c
src/: analog_clock.c  binary_clock.c  decimal_clock.c  lib.c  main.cpp  panel_loop.c  render_task.c  ui_element.c  weather.c  weather_fetch_task.c
