idf_component_register(SRCS "elements/spectrum.c"
                            "tasks/fft.c"
                            "elements/analog_clock.c"
                            "elements/binary_clock.c"
                            "elements/decimal_clock.c"
                            "elements/hex_clock.c"
                            "olive.c"
                            "main.c"
                            "tasks/render.c"
                            "ui_element.c"
                            "tasks/weather_fetch.c"
                            "elements/weather.c"
                            "tasks/led.c"
                    INCLUDE_DIRS "include/"
                    EMBED_TXTFILES "certs/isrg_root_x1.pem")
