idf_component_register(SRCS "elements/spectrum.c"
                            "tasks/fft.c"
                            "elements/analog_clock.c"
                            "elements/binary_clock.c"
                            "elements/decimal_clock.c"
                            "elements/hex_clock.c"
                            "olive.c"
                            "main.c"
                            "tasks/render.c"
                            "ui_element.c"
                            "tasks/http.c"
                            "elements/weather.c"
                            "tasks/led.c"
                            "elements/media.c"
                            "elements/co2.c"
                            "tasks/http/co2.c"
                            "tasks/http/temp.c"
                            "tasks/http/weather.c"
                            "tasks/http/media.c"
                            "tasks/ir.c"
                    INCLUDE_DIRS "include/"
                    EMBED_TXTFILES "certs/usertrust_rsa_ca.pem"
                                   "certs/openweathermap_org_chain.pem")
